--- a/meeting_planner/website/templates/website/welcome.html
+++ b/meeting_planner/website/templates/website/welcome.html
@@ -10,5 +10,8 @@
         This is a webiste dedectaded to the Harbury Rugby club and when they
         have games.
     </p>
+    <p>
+        {{message}}
+    </p>
 </body>
 </html>
